# edge-ai-betting-public

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_QUICK.md  DEPLOY_NOW.md  SYSTEM_BLUEPRINT.md  configure-vercel.sh  deploy-to-vercel.sh  docker-compose.yml  render-backend.yaml  vercel.json
backend/: .env.example  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  games.py  picks.py  user.py  wallet.py
backend/app/engine/: ensemble.py  ev_calculator.py  line_movement.py
backend/app/ml/: bayesian.py  elo.py  ml_pipeline.py  poisson.py
backend/app/models/: schemas.py
backend/app/pipeline/: conflict.py  features.py  normalizer.py
backend/app/services/: chat_service.py  odds_service.py  stats_service.py
backend/app/workers/: celery_app.py  odds_worker.py  stats_worker.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AlienWrapper.tsx  BetCard.tsx  Navbar.tsx  Providers.tsx  UserBadge.tsx  WalletBalance.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAlienIntegration.ts
frontend/src/lib/: api.ts  store.ts
